--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
   
   @font-face {
     font-family: 'Canela Web';
-    src: url('../fonts/Canela-LightItalic-Web.woff2') format('woff2'),
-         url('../fonts/Canela-LightItalic-Web.woff') format('woff');
+    src: url('fonts/Canela-LightItalic-Web.woff2') format('woff2'),
+         url('fonts/Canela-LightItalic-Web.woff') format('woff');
     font-weight:  300;
     font-style:   italic;
     font-stretch: normal;
@@ -54,8 +54,8 @@
   
   @font-face {
     font-family: 'Canela Web';
-    src: url('../fonts/Canela-Light-Web.woff2') format('woff2'),
-         url('../fonts/Canela-Light-Web.woff') format('woff');
+    src: url('fonts/Canela-Light-Web.woff2') format('woff2'),
+         url('fonts/Canela-Light-Web.woff') format('woff');
     font-weight:  300;
     font-style:   normal;
     font-stretch: normal;
