font size change

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 
 @font-face {
     font-family: 'Canela Web';
-    src: url('https://github.com/elaine-keller/elaine-keller.github.io/blob/main/fonts/Canela-BoldItalic-Web.woff2') format('woff2'),
-         url('https://github.com/elaine-keller/elaine-keller.github.io/blob/main/fonts/Canela-BoldItalic-Web.woff') format('woff');
+    src: url('fonts/Canela-BoldItalic-Web.woff2') format('woff2'),
+         url('fonts/Canela-BoldItalic-Web.woff') format('woff');
     font-weight:  700;
     font-style:   italic;
     font-stretch: normal;
@@ -20,8 +20,8 @@
   
   @font-face {
     font-family: 'Canela Web';
-    src: url('https://github.com/elaine-keller/elaine-keller.github.io/blob/main/fonts/Canela-Bold-Web.woff2') format('woff2'),
-         url('https://github.com/elaine-keller/elaine-keller.github.io/blob/main/fonts/Canela-Bold-Web.woff') format('woff');
+    src: url('fonts/Canela-Bold-Web.woff2') format('woff2'),
+         url('fonts/Canela-Bold-Web.woff') format('woff');
     font-weight:  700;
     font-style:   normal;
     font-stretch: normal;
@@ -37,8 +37,8 @@
   
   @font-face {
     font-family: 'Canela Web';
-    src: url('fonts/Canela-LightItalic-Web.woff2') format('woff2'),
-         url('fonts/Canela-LightItalic-Web.woff') format('woff');
+    src: url('../fonts/Canela-LightItalic-Web.woff2') format('woff2'),
+         url('../fonts/Canela-LightItalic-Web.woff') format('woff');
     font-weight:  300;
     font-style:   italic;
     font-stretch: normal;
@@ -54,8 +54,8 @@
   
   @font-face {
     font-family: 'Canela Web';
-    src: url('fonts/Canela-Light-Web.woff2') format('woff2'),
-         url('fonts/Canela-Light-Web.woff') format('woff');
+    src: url('../fonts/Canela-Light-Web.woff2') format('woff2'),
+         url('../fonts/Canela-Light-Web.woff') format('woff');
     font-weight:  300;
     font-style:   normal;
     font-stretch: normal;
@@ -75,7 +75,7 @@ body {
   font-weight: 400;
   line-height: 1.58;
   letter-spacing: -.003em;
-  font-size: 20px;
+  font-size: 18px;
   padding: 70px;
 }
 
@@ -83,7 +83,7 @@ h1 {
     font-family: 'Canela Web', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 60px;
+    font-size: 4em;
     line-height: 1.15;
     letter-spacing: -.0em;
     color: rgba(0, 0, 0, 0.8);
@@ -93,7 +93,7 @@ h2 {
     font-family: 'Canela Web', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 38px;
+    font-size: 2.5em;
     line-height: 1.15;
     letter-spacing: -.0em;
     color: rgba(0, 0, 0, 0.8);
