--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
   font-weight: 400;
   line-height: 1.58;
   letter-spacing: -.003em;
-  font-size: 20px;
+  font-size: 18px;
   padding: 70px;
 }
 
@@ -83,7 +83,7 @@ h1 {
     font-family: 'Canela Web', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 60px;
+    font-size: 4em;
     line-height: 1.15;
     letter-spacing: -.0em;
     color: rgba(0, 0, 0, 0.8);
@@ -93,7 +93,7 @@ h2 {
     font-family: 'Canela Web', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 38px;
+    font-size: 2.5em;
     line-height: 1.15;
     letter-spacing: -.0em;
     color: rgba(0, 0, 0, 0.8);
