--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+/*-----------------------------------------------------------------------------------
+
+-----------------------------------------------------------------------------------
+
+    CSS INDEX
+    ===================
+
+    01. Default CSS
+	  02. Header
+    03. Hero
+	  04. Footer
+
+-----------------------------------------------------------------------------------*/
+/*===========================
+      01.DEFAULT css 
+===========================*/
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
@@ -111,5 +127,407 @@ h2 {
     -webkit-font-smoothing: antialiased;
   }
 
+  .bg_cover {
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%; }
 
+  
+/*===========================
+        02.HEADER css 
+===========================*/
+/*===== NAVBAR =====*/
+.header_navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s; }
+
+.sticky {
+  position: fixed;
+  z-index: 99;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s; }
+  .sticky .navbar {
+    padding: 10px 0; }
+
+.navbar {
+  padding: 25px 0;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s; }
+
+.navbar-brand {
+  padding: 0; }
+
+.navbar-toggler {
+  padding: 0; }
+  .navbar-toggler .toggler-icon {
+    width: 30px;
+    height: 2px;
+    background-color: #293651;
+    display: block;
+    margin: 5px 0;
+    position: relative;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -moz-transition: all 0.3s ease-out 0s;
+    -ms-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s; }
+  .navbar-toggler.active .toggler-icon:nth-of-type(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 7px; }
+  .navbar-toggler.active .toggler-icon:nth-of-type(2) {
+    opacity: 0; }
+  .navbar-toggler.active .toggler-icon:nth-of-type(3) {
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    top: -7px; }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 9;
+    -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    padding: 5px 12px; } }
+@media (max-width: 767px) {
+  .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 9;
+    -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
+    padding: 5px 12px; } }
+
+.navbar-nav .nav-item {
+  margin-left: 45px;
+  position: relative; }
+  @media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .navbar-nav .nav-item {
+      margin-left: 30px; } }
+  @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .navbar-nav .nav-item {
+      margin: 0; } }
+  @media (max-width: 767px) {
+    .navbar-nav .nav-item {
+      margin: 0; } }
+  .navbar-nav .nav-item a {
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -moz-transition: all 0.3s ease-out 0s;
+    -ms-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+    padding: 10px 0;
+    position: relative;
+    font-family: "Open Sans", sans-serif;
+    position: relative; }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+      .navbar-nav .nav-item a {
+        display: block;
+        padding: 4px 0;
+        color: #293651; } }
+    @media (max-width: 767px) {
+      .navbar-nav .nav-item a {
+        display: block;
+        padding: 4px 0;
+        color: #293651; } }
+    .navbar-nav .nav-item a span {
+      width: 0;
+      height: 2px;
+      background-color: #fff;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      border-radius: 50px;
+      opacity: 0;
+      visibility: hidden;
+      -webkit-transition: all 0.3s ease-out 0s;
+      -moz-transition: all 0.3s ease-out 0s;
+      -ms-transition: all 0.3s ease-out 0s;
+      -o-transition: all 0.3s ease-out 0s;
+      transition: all 0.3s ease-out 0s; }
+      .navbar-nav .nav-item a span::before {
+        position: absolute;
+        content: '';
+        width: 0;
+        height: 2px;
+        background-color: #fff;
+        left: 110%; }
+      .navbar-nav .nav-item a span::after {
+        position: absolute;
+        content: '';
+        width: 0;
+        height: 2px;
+        background-color: #fff;
+        left: 140%; }
+  .navbar-nav .nav-item.active > a span, .navbar-nav .nav-item:hover > a span {
+    opacity: 1;
+    visibility: visible;
+    width: 60%; }
+    .navbar-nav .nav-item.active > a span::before, .navbar-nav .nav-item:hover > a span::before {
+      width: 20%; }
+    .navbar-nav .nav-item.active > a span::after, .navbar-nav .nav-item:hover > a span::after {
+      width: 15%; }
+  .navbar-nav .nav-item:hover .sub-menu {
+    top: 100%;
+    opacity: 1;
+    visibility: visible; }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+      .navbar-nav .nav-item:hover .sub-menu {
+        top: 0; } }
+    @media (max-width: 767px) {
+      .navbar-nav .nav-item:hover .sub-menu {
+        top: 0; } }
+  .navbar-nav .nav-item .sub-menu {
+    width: 200px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 110%;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease-out 0s;
+    -moz-transition: all 0.3s ease-out 0s;
+    -ms-transition: all 0.3s ease-out 0s;
+    -o-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s; }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+      .navbar-nav .nav-item .sub-menu {
+        position: relative;
+        width: 100%;
+        top: 0;
+        display: none;
+        opacity: 1;
+        visibility: visible; } }
+    @media (max-width: 767px) {
+      .navbar-nav .nav-item .sub-menu {
+        position: relative;
+        width: 100%;
+        top: 0;
+        display: none;
+        opacity: 1;
+        visibility: visible; } }
+    .navbar-nav .nav-item .sub-menu li {
+      display: block; }
+      .navbar-nav .nav-item .sub-menu li a {
+        display: block;
+        padding: 8px 20px;
+        color: #293651; }
+        .navbar-nav .nav-item .sub-menu li a.active, .navbar-nav .nav-item .sub-menu li a:hover {
+          padding-left: 25px;
+          color: #00A78E; }
+    .navbar-nav .sub-nav-toggler {
+       display: none; }
+       @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .navbar-nav .sub-nav-toggler {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      background: none;
+      color: #293651;
+      font-size: 18px;
+      border: 0;
+      width: 30px;
+      height: 30px; } }
+  @media (max-width: 767px) {
+    .navbar-nav .sub-nav-toggler {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      background: none;
+      color: #293651;
+      font-size: 18px;
+      border: 0;
+      width: 30px;
+      height: 30px; } }
+  .navbar-nav .sub-nav-toggler span {
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid #293651;
+    border-bottom: 1px solid #293651;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    position: relative;
+    top: -5px; }
+
+  .sticky .navbar-nav .nav-item a {
+    color: #293651; }
+  .sticky .navbar-nav .nav-item.active > a, .sticky .navbar-nav .nav-item:hover > a {
+    color: #00A78E; }
+
+  /*===== HEADER HERO =====*/
+.header_hero {
+  position: relative;
+  z-index: 5;
+  background-position: bottom center;
+  background-color: #F9F9F9;
+  overflow: hidden;
+  padding: 100px; }
+
+  .header_hero_shape {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    z-index: -1; }
+    .header_hero_shape::before {
+      position: absolute;
+      content: '';
+      width: 1000%;
+      height: 100%;
+      background-color: #00A78E;
+      -webkit-transform: skewX(20deg);
+      -moz-transform: skewX(20deg);
+      -ms-transform: skewX(20deg);
+      -o-transform: skewX(20deg);
+      transform: skewX(20deg);
+      top: 0;
+      left: 0; }
+
+/*===========================
+        03.ABOUT css 
+===========================*/
+.about_image {
+  position: relative; }
+  .about_image img {
+    width: 100%; }
+  .about_image .about_shape {
+    width: 404px;
+    height: 525px;
+    border-left: 15px solid #00A78E;
+    border-bottom: 15px solid #00A78E;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1; }
+    @media (max-width: 767px) {
+      .about_image .about_shape {
+        width: 100%;
+        height: 380px; } }
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      .about_image .about_shape {
+        width: 404px;
+        height: 525px; } }
+    .about_image .about_shape::before {
+      position: absolute;
+      content: '';
+      width: 15px;
+      height: 85%;
+      background-color: #00A78E;
+      bottom: 0;
+      right: 0; }
+    .about_image .about_shape::after {
+      position: absolute;
+      content: '';
+      width: 104%;
+      height: 15px;
+      background-color: #00A78E;
+      top: 36px;
+      right: -2px;
+      -webkit-transform: rotate(11deg);
+      -moz-transform: rotate(11deg);
+      -ms-transform: rotate(11deg);
+      -o-transform: rotate(11deg);
+      transform: rotate(11deg);
+      border-top-left-radius: 20px; }
+      @media (max-width: 767px) {
+        .about_image .about_shape::after {
+          top: 27px; } }
+      @media only screen and (min-width: 576px) and (max-width: 767px) {
+        .about_image .about_shape::after {
+          top: 37px; } }
+
+.about_content p {
+  margin-top: 10px; }
+
+.skill_item .skill_header {
+  position: relative; }
+  .skill_item .skill_header .skill_title {
+    font-size: 14px;
+    font-weight: 500; }
+  .skill_item .skill_header .skill_percentage {
+    position: absolute;
+    top: -3px;
+    right: 0; }
+    .skill_item .skill_header .skill_percentage p {
+      font-size: 14px;
+      font-weight: 400; }
+.skill_item .skill_bar {
+  margin-top: 15px; }
+  .skill_item .skill_bar .bar_inner {
+    width: 100%;
+    height: 9px;
+    border-radius: 5px;
+    background-color: rgba(100, 111, 135, 0.11);
+    position: relative; }
+    .skill_item .skill_bar .bar_inner .progress_line {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 9px;
+      border-radius: 5px;
+      background-color: #00A78E;
+      -webkit-transition: all 2s ease-out 0s;
+      -moz-transition: all 2s ease-out 0s;
+      -ms-transition: all 2s ease-out 0s;
+      -o-transition: all 2s ease-out 0s;
+      transition: all 2s ease-out 0s;
+      width: 0; }
+      .skill_item .skill_bar .bar_inner .progress_line::before {
+        position: absolute;
+        content: '';
+        width: 7px;
+        height: 18px;
+        background-color: #fff;
+        border: 2px solid #00A78E;
+        top: -5px;
+        right: 0; }
 
